Fixed a bug with one of the tasks, moved objective creation to use local storage to check if enabled or enabler has been completed for more accurate objective setting, added sounds for trasmission incomings and enabled task notifications

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1288,6 +1288,7 @@ h1 {
 .game-table tbody tr {
     transition: all 0.3s ease;
     position: relative;
+    cursor: pointer;
 }
 
 .game-table tbody tr:hover {
